# cpp-conway-gol

./: .gitignore  CMakeLists.txt  LICENSE  README.md
apps/: CMakeLists.txt  app.cpp
conway_gol/: gol.cpp  gol.hpp  grid.hpp  main.cpp
conway_gol/gol/: controller.cpp  controller.hpp  gol.hpp  model.cpp  model.hpp  view.cpp  view.hpp
conway_gol/sdl_helpers/: pixel_format.hpp  texture.hpp
include/conway-gol/: conway-gol.hpp
src/: CMakeLists.txt  conway-gol.cpp  gol.cpp  main.cpp
